--- a/SmallProject/Amazon/style.css
+++ b/SmallProject/Amazon/style.css
@@ -1,8 +1,7 @@
     /*  https://cdnjs.com/libraries/font-awesome     This link is style css*/
-    
     *{
         margin: 0;
-        font-family: cursive;
+        font-family: Arial;
         border: border-box;
 
     }
@@ -11,25 +10,258 @@
        background-color: #0f1111;
        color: white;
        display: flex;
+       align-items: center;
+       justify-content: space-evenly;
     }
     .nav-logo{
         height: 50px;
         width: 130px;
-
     }
     .logo{
-        background-image: url();
+        background-image: url("clone/amazon_logo.png");
         background-size: cover;
         height: 50px;
         width: 100px;
     
     }
-    .border{
-        border: 1.5 solid transparent;
-    }
+   .border {
+    border: 2px soild transparent;
+   }
     
-    .border:hover {
-        border: 1.5 solid whitesmokess;
-     }
+   .border:hover{
+    border: 2px soild white;
+   }
+ 
+   /* for Box2  */
+.add-first {
+    color: #cccccc;
+    font-size: o.85rem;
+    margin-left: 15px;
+    font-family: cursive;
+}
 
-    
+.add-second{
+   font-size: 1rem;
+   margin-left: 3px;
+}
+
+.add-icon{
+    display: flex;
+    align-items:center;
+}
+/* Box 3 */
+
+.nav-search{
+    display: flex;
+    background-color: pink;
+    justify-content: space-evenly;
+    width: 620px;
+    height: 35px;
+    border-radius: 4px;
+}
+
+.search-select{
+    background-color: #e5e3e3;
+    width: 55px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius:4px ;   
+     border: none;
+}
+
+.search-input{
+ width: 85%;
+ font-size: 1rem;
+ border: none;
+} 
+
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    font-size: 1.2rem;
+    align-items: center;
+    background-color: rgb(247, 185, 39);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111; 
+}
+.nav-search:hover{
+    border: 2px solid orange;
+}
+/* Box 4 */
+
+span{
+    font-size: 0.7rem;
+}
+
+.nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* boc 6 */
+
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size: 14px;
+    font-weight: 700;
+}
+
+/* panel */
+
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;   
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.panel-ops p{
+    display: inline;
+    margin-left: 15px;
+}
+
+.panel-ops{
+    width: 78%;
+    font-size: 0.85rem;
+}
+
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+/* Hero-Section */
+
+.hero-section{
+    background-image: url("./clone/hero_image.jpg");
+    background-size: cover;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-message{
+    background-color: white;
+    color: #0f1111;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    width: 90%;
+    margin-bottom: 5rem;
+}
+
+.hero-message a{
+    color: #007185;
+}
+/* box7 */
+
+.shop-section{
+    /* margin-top: -7rem; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+.box{
+    width: 23%;
+    height: 400px;
+   padding: 20px 0px 15px;
+   margin-top: 15px;
+    background-color: white;
+} 
+
+.box-img{
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.box-content{
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.box p{
+    color: #007185;
+}
+
+
+/* Footer */
+
+/* footer{
+    margin: 15px;
+} */
+
+.foot-panel1{
+    background-color: #37475a;
+    height: 50px;
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+
+
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 12px;
+
+}
+
+ul a{
+    display: flex;
+    color: white;
+   font-size: 0.85rem;
+   margin-top: 10px;
+}
+
+.foot-panel3{
+    background-color: #1a242d;
+    color: white;
+    height: 70px;
+    border-top: 0.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url("./clone/amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+
+/* panel 4 */
+
+.foot-panel4{
+    background-color:#0f1111 ;
+    color: white;
+    height:80px;
+    font-size: 0.7rem;
+    text-align: center;
+}
+
+.pages{
+    padding-top: 25px;
+}
+.copyright{
+    font-size: 0.85rem;
+    padding-top: 25px;
+    color: #aaaeb3;
+}
