--- a/SmallProject/Amazon/style.css
+++ b/SmallProject/Amazon/style.css
@@ -3,7 +3,7 @@
         margin: 0;
         font-family: Arial;
         border: border-box;
-
+        cursor: default;   
     }
     .navbar{
         height: 60px;
@@ -174,9 +174,10 @@ span{
 .box{
     width: 23%;
     height: 400px;
-   padding: 20px 0px 15px;
-   margin-top: 15px;
+    padding: 20px 0px 15px;
+    margin-top: 15px;
     background-color: white;
+  
 } 
 
 .box-img{
@@ -184,7 +185,21 @@ span{
     background-size: cover;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    cursor: pointer;
+
 }
+ /* hover img card  */
+
+.box-img:hover{
+    background-image: url('./clone/box1_image.jpg');
+    height: 400px;
+    width: 400px;
+    margin-bottom: 3rem;
+    transition-duration: 0.3s;
+    overflow: visible;
+}
+
+
 
 .box-content{
     margin-left: 1rem;
@@ -194,7 +209,6 @@ span{
 .box p{
     color: #007185;
 }
-
 
 /* Footer */
 
@@ -220,14 +234,19 @@ span{
     display: flex;
     justify-content: space-evenly;
     padding-top: 12px;
-
+    
 }
 
 ul a{
     display: flex;
     color: white;
    font-size: 0.85rem;
-   margin-top: 10px;
+   font-family: Arial,sans-serif, Helvetica;
+   margin-top: 15px;
+   text-decoration-line: none;
+}
+ul h5{
+    font-size: 1rem;
 }
 
 .foot-panel3{
@@ -245,6 +264,16 @@ ul a{
     background-size: cover;
     height: 50px;
     width: 100px;
+}
+
+.foot-language{
+    background-color: transparent;
+    color: white;
+    margin: 0px 4px 0px 0px;
+ padding: 6px 18px 6px 8px;
+}
+.foot-language i{
+    color: white;
 }
 
 /* panel 4 */
