--- a/SmallProject/Portfolio/Style.css
+++ b/SmallProject/Portfolio/Style.css
@@ -48,16 +48,17 @@
             display: flex ;
             justify-content: space-around;
             margin: 120px 0;
+            height: 56vh;
         }
     .firstsection > div {
               width: 30%;
         }
     .leftsection{
             font-size: 1.5rem;
-            margin-top: 9%;
+            margin-top: 5vh;
             font-size: xx-large;
+            line-height: 1.1;
             /* margin: 70px  0; */
-
         }
 
     .leftsection .button{
@@ -73,8 +74,11 @@
             color: aliceblue;
             background-color: #1e2167;
             padding: 12px;
-
         }
+       .button .btn a{
+        color: white;
+        text-decoration: none;
+       }
 
     .rightsection img{
             width: 80%;
@@ -96,13 +100,63 @@
     .secondsection{
             font-size: 1rem;
             margin-left: 7%;
-            height: 80vh;
-            /* margin-top: 0%; */
-            /* font-family: cursive; */
+            height: 90vh;
+            
         }
+    .secondsection .box_2{
+            border: 0.5px solid;
+            border-radius: 30px;
+            box-shadow: 10px 9px 10px rgba(229, 225, 225, 0.5);
+            margin-top: 50px;
+            margin-left: 200px;
+            margin-right: 250px;
+            height: 40vh; 
+            display: flex; 
+    }  
+    .box_2 h4{
+        line-height: 1.1px;
+        margin-top: 7px;
+    }
+    .box_2 p{
+      text-align: start;
+    }
+    .box_2 ul{
+          margin-left: 30px;
+          font: 700;
+          font-size: 25px;
+    }
+   .box_2 ul{
+        text-decoration: none;
+   }
+   
+   .thirdsection{
+        font-size: 1rem;
+        margin-left: 7%;
+        height: 90vh;
+   }
+   .thirdsection .box_3{
+            border-radius: 30px;
+            margin-top: 50px;
+            margin-left: 200px;
+            margin-right: 250px;
+            display: flex; 
+            justify-content: space-evenly;
+   }
+   .box_3 h3{
+    margin: 50px;
+    border: 0.3px solid white;
+    border-radius: 10px;
+   margin-bottom: 20%;
+   padding: 10px;
+   }
+   .box_3 h3:hover{
+    box-shadow: 10px 9px 10px rgba(229, 225, 225, 0.5);
+    border-radius: 10px;
+    border: none;
+   }
+
     footer{
             background-color: rgb(57 73 86);
-            /* height: 233px; */
         }
     .footer{
             display: flex;
@@ -117,7 +171,7 @@
             width: 235px;
         }
     p{
-            text-align: center;
+          text-align: center;
           padding: 12px 0;
           color: rgb(177, 176, 176);
           font-size: small;
