--- a/SmallProject/ResponsiveNavBar/style.css
+++ b/SmallProject/ResponsiveNavBar/style.css
@@ -34,6 +34,7 @@ nav a{
 }
 nav a:hover{
     background-color: #f0f0f0;
+    box-shadow:  10px 5px 8px rgba(0,0 , 0, 0.1);
 }
 nav li:first-child{
     margin-right: auto;
