--- a/SmallProject/mamaearth/style.css
+++ b/SmallProject/mamaearth/style.css
@@ -159,6 +159,7 @@
 .option{
     display: -webkit-box;
     display: -ms-flexbox;
+    box-shadow: -10px 0 10px rgb(0,0,0,0.1);
     display: flex;
     height: 40px;
     -webkit-box-align: center;
@@ -168,7 +169,6 @@
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
    padding: 7.8px 78.792px;
-
 }
 .option i{
   text-decoration: none;
