--- a/SmallProject/Portfolio/Style.css
+++ b/SmallProject/Portfolio/Style.css
@@ -1,49 +1,93 @@
 *{
-        
-        box-sizing: border-box;
-    }
+        margin: 0;
+        padding: 0;
+}
     body{
+        min-height: 100vh;
         background-color: rgb(0,0,33);
         color: white;
         font-family: 'Poppins', sans-serif;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        cursor: default;
     }
-
-
     nav{
-        display: flex;
-        justify-content: space-around;  
-        align-items: center;
-        height: 70px;
         background-color: rgb(0,0,90);
+        box-shadow: 3px 3px 5px rgba(255, 251, 251, 0.1);
         }
     nav ul{
-            display: flex;
-            justify-content: center;
-            /* margin:25px; */
+        width: 100%;
+        list-style: none;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
         }
-    nav ul li{
+        nav a{
             list-style: none;
             margin:23px;
-        }
-    nav ul li a{
+            display: flex;
+            align-items: center;
+            height: 100%;
+            padding: 0 30px;
             text-decoration: none;
             color: bisque;
-        }
-    /* nav ul li a:hover{
-           color:rgb(78, 244, 78);
-           font-family: cursive;
-        
-        } */
-    .left{
+        }   
+        nav li:first-child{
+            margin-right: auto;
             font-size: 1.5rem;
             font-family: initial;
+           color: White;
         }
-       
-    hr{
-            height: 1.2px;
-            margin: 100px 150px;
-            background: rgb(124, 208, 249);
+.sidebar{
+            position: fixed;
+            top: 0;
+            right: 0;
+            height: 100vh;
+            width: 250px;
+            z-index: 999;
+            background-color: rgb(255,255,255,0.1);
+            backdrop-filter: blur(9px) ;
+            box-shadow: -10px 0 10px rgb(0,0,0,0.1);
+            display: none;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
         }
+        .sidebar li{
+            width: 100%;
+        }
+        .sidebar a{
+            width: 100%
+        }
+        .menu-button{
+            color: white;
+            display: none;
+        }
+@media (max-width:599px){
+    body{
+        width: 100vw;
+    }
+    .hideonmobaile{
+        display: none;
+    }
+    .menu-button{
+        display: block;
+    }
+  
+}
+@media (max-width:500px) {
+    .sidebar{
+        width: 100%;
+    }
+}
+
+
+hr{
+    height: 1.2px;
+    margin: 100px 150px;
+    background: rgb(124, 208, 249);
+}
     .firstsection{
             display: flex ;
             justify-content: space-around;
@@ -57,8 +101,7 @@
             font-size: 1.5rem;
             margin-top: 5vh;
             font-size: xx-large;
-            line-height: 1.1;
-            /* margin: 70px  0; */
+            margin: 70px  0;
         }
 
     .leftsection .button{
@@ -74,6 +117,29 @@
             color: aliceblue;
             background-color: #1e2167;
             padding: 12px;
+        }
+
+        @media (max-width:599px) {
+            .leftsection{
+                margin: 30px;
+                width: 100%;
+                text-align: center; 
+            }
+            .button{
+                display: flex;
+                justify-content: space-around;
+            }
+            .btn{
+                margin: 10px;
+            }
+
+        }
+
+        @media (max-width:500px) {
+            .rightsection{
+                display: none;
+
+            }
         }
        .button .btn a{
         color: white;
@@ -101,25 +167,27 @@
             font-size: 1rem;
             margin-left: 7%;
             height: 90vh;
-            
         }
     .secondsection .box_2{
-            border: 0.5px solid;
+            /* border: 0.5px solid; */
             border-radius: 30px;
             box-shadow: 10px 9px 10px rgba(229, 225, 225, 0.5);
-            margin-top: 50px;
+            /* box-shadow: 10px 9px 10px rgba(229, 225, 225, 0.5); */
+            margin-top: 60px;
             margin-left: 200px;
             margin-right: 250px;
             height: 40vh; 
             display: flex; 
+            padding: 30px;
     }  
     .box_2 h4{
-        line-height: 1.1px;
-        margin-top: 7px;
+        line-height: 10.1px;
+        margin-top: 12px;
     }
     .box_2 p{
       text-align: start;
-    }
+     margin-top: 10px;
+}
     .box_2 ul{
           margin-left: 30px;
           font: 700;
@@ -134,6 +202,11 @@
         margin-left: 7%;
         height: 90vh;
    }
+   .thirdsection h1{
+    /* font-family: monospace; */
+    /* font-size: 27px; */
+     margin-left: 45%;
+   }
    .thirdsection .box_3{
             border-radius: 30px;
             margin-top: 50px;
@@ -141,6 +214,7 @@
             margin-right: 250px;
             display: flex; 
             justify-content: space-evenly;
+            transition: all 0.4s;
    }
    .box_3 h3{
     margin: 50px;
@@ -148,12 +222,18 @@
     border-radius: 10px;
    margin-bottom: 20%;
    padding: 10px;
+   font-size: 18px;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   transition: transform 0.3s ease-in-out;
    }
    .box_3 h3:hover{
     box-shadow: 10px 9px 10px rgba(229, 225, 225, 0.5);
     border-radius: 10px;
     border: none;
+    animation: buttonAnimation 0.3s forwards;
    }
+   
+  
 
     footer{
             background-color: rgb(57 73 86);
@@ -187,8 +267,13 @@
     .footer-third i{
             color: white;
         }
+        .LinkedIn i{
+            color: #0A66C2;  
+        }
+        .git i{
+            color: black;
+        }
+        
 .footer-third img{
-   background-color: blueviolet;
-     
+   background-color: blueviolet;    
 }
-   
